--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
                         <h1 class="text-white text-3xl tracking-tighter"><%= val %></h1>
                         <div class="flex w-full justify-between items-center">
                             <a class="text-blue-500 inline-block mt-3" href="/file/<%= val %>">Read More.</a>
+                            <a class="text-red-500 inline-block mt-3" href="/delete/<%= val%>">Delete</a>
                             <a class="text-zinc-500 inline-block mt-3" href="/edit/<%= val %>">Edit</a>
                         </div>
                     
